# ncf-recommender-system

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
app/: streamlit_app.py
artifacts/checkpoints/: ml-1m_gmf_best.pt  ml-1m_gmf_last.pt
artifacts/runs/: gmf_ml-1m_e098a76d.json
configs/: config.yaml  eval_gmf.yaml  eval_mlp.yaml  eval_neumf.yaml  train_gmf.yaml  train_mlp.yaml  train_neumf.yaml  train_neumf_pretrained.yaml
configs/data/: ml1m.yaml  pinterest20.yaml
configs/eval/: default.yaml
configs/model/: gmf.yaml  mlp.yaml  neumf.yaml
configs/train/: default.yaml  train_gmf.yaml
docs/: architecture.md  migration.md  session_context.md
scripts/: dev_setup.ps1  download_data.py  download_movies_dat.py
src/ncf_recommender/api/: app.py
src/ncf_recommender/cli/: benchmark.py  eval.py  export.py  infer.py  serve.py  train.py
src/ncf_recommender/configs/: schema.py
src/ncf_recommender/data/: datasets.py  negative_sampling.py
src/ncf_recommender/evaluation/: metrics.py  protocols.py
src/ncf_recommender/inference/: export.py  service.py
src/ncf_recommender/models/: gmf.py  mlp.py  neumf.py
src/ncf_recommender/training/: benchmark.py  lightning_module.py  tracking.py  trainer.py
tests/integration/: test_cli_help.py
tests/unit/: test_checkpointing.py  test_data_pipeline.py  test_inference_service.py  test_metrics.py  test_mlops_utils.py  test_models_forward.py  test_neumf_pretrain.py  test_runtime_device.py  test_smoke_imports.py  test_training_utils.py
