[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ncf-recommender"
version = "0.1.0"
description = "Modern Neural Collaborative Filtering (GMF/MLP/NeuMF) stack"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "NCF Engineering Team" }]
dependencies = [
  "torch>=2.6.0",
  "lightning>=2.5.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "numpy>=1.26.4",
  "pandas>=2.2.3",
  "scipy>=1.13.1",
  "scikit-learn>=1.6.1",
  "pyyaml>=6.0.2",
  "tqdm>=4.67.1",
  "rich>=14.0.0",
  "typer>=0.16.0"
]

[project.optional-dependencies]
loggers = [
  "tensorboard>=2.19.0",
  "wandb>=0.19.11"
]
serving = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0"
]
export = [
  "onnx>=1.18.0",
  "onnxruntime>=1.22.0"
]
mlops = [
  "mlflow>=2.22.0"
]
demo = [
  "streamlit>=1.45.0"
]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.8",
  "black>=25.1.0",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "types-PyYAML>=6.0.12.20241230"
]

[project.scripts]
ncf-train = "ncf_recommender.cli.train:run"
ncf-eval = "ncf_recommender.cli.eval:run"
ncf-infer = "ncf_recommender.cli.infer:run"
ncf-export = "ncf_recommender.cli.export:run"
ncf-serve = "ncf_recommender.cli.serve:run"
ncf-benchmark = "ncf_recommender.cli.benchmark:run"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP", "B", "N", "ANN"]
lint.ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/ncf_recommender"]

[tool.hatch.build.targets.wheel]
packages = ["src/ncf_recommender"]
